--- a/index.html
+++ b/index.html
@@ -1,1 +1,92 @@
+<!DOCTYPE html>
+<html lang="en-US">
+<body>
+    <div class="top-bar">
+        <h1>
+            My Forum
+        </h1>
+    </div>
+    <div class="main">
+  <ol>
+      <li class="row">
+          <a href="/display.html">
+          <h4 class="title">
+            PS5 Digital Edition
+          </h4>
+          <div class="bottom">
+              <p class="timestamp">
+                11/4/2021
+              </p>
+              <p class="comment-count">
+                2 comments
+              </p>
+              <p class="likes">
+                  50 &#128077
+              </p>
+              <p class="dislike">
+                  15 &#128078
+              </p>
+            </div>
+        </a>
+      </li>
+      <li class="row">
+        <a href="/item">
+        <h4 class="title">
+          Samsung 55"    
+        </h4>
+        <div class="bottom">
+            <p class="timestamp">
+                10/31/2021
+            </p>
+            <p class="comment-count">
+                20 comments
+            </p>
+            <p class="likes">
+                105 &#128077
+            </p>
+            <p class="dislike">
+                88 &#128078
+            </p>
+          </div>
+      </a>
+    </li>
+  </ol>
+    </div>
+  <style>
+      body {
+          margin: 10 px;
+      }
+      a {
+          text-decoration: none;
+          color: black
+      }
+      h4, h1, ol {
+          margin: 0px;
+      }
+      p {
+          margin: 5px;
+      }
+      .top-bar {
+          background-color: coral;
+          padding: 0 40px;
+      }
+      .main {
+          background-color:blanchedalmond;
+          padding: 10px;
+      }
+      .row {
+          padding: 5px;
+      }
+      .bottom {
+          display: flex;
+          color: black;
+          font-size: 15px;
+      }
+      .timestamp {
+          padding-left: 10px;
 
+      }
+  </style>
+</body>
+
+</html>
